# SAMBA

./: #vbm_pipeline.pl#  .gitignore  .gitmodules  .svn.externals  ANTsR_vba.R  ANTsR_vba_fx.R  Headfile.pm  Quick_start_SAMBA  Quick_start_SAMBA.txt  README  README.md  SAMBA_SGE_job.bash  SAMBA_archive_prep.pl  SAMBA_checklist_for_CIVM_users_May2018.txt  SAMBA_cpanfile  SAMBA_data_packager.pl  SAMBA_global_variables.pm  SAMBA_input_orientation_manual_tester.bash  SAMBA_pipeline_utilities.pm  SAMBA_setup.bash  SAMBA_startup  SAMBA_startup_BIAC  SAMBA_startup_template.headfile  SAMBA_startup_template_single_seg.headfile  SAMBA_structure.pm  _set_local_perl_path.sh  ants.def  apply_affine_reg_to_atlas_vbm.pm  apply_affine_reg_to_atlas_vbm.pm~  apply_mdt_warps_vbm.pm  apply_warps_to_bvecs.pm  base.def  bashrc_for_SAMBA  bashrc_for_SAMBA_template  build_samba_staged.sh  calculate_individual_label_statistics_vbm.pm  calculate_jacobian.m  calculate_jacobian_natural_log.m  calculate_jacobians_vbm.pm  calculate_mdt_images_vbm.pm  (+71 more)
SAMBA_python/: environment.lock.meta.txt  environment.lock.yml  environment.yml  pyproject.toml  setup-samba-python-env.sh
SAMBA_python/.github/workflows/: ci.yml  freeze-on-tag.yml
SAMBA_python/scripts/: compare_group_stats.py  create_centered_mass_from_image_array.py  create_identity_warp.py  fix_write_array_to_file.sh  fix_write_array_to_file_syswrite.sh  freeze-env.sh  recreate-env-from-lock.sh  samba-benchmark-io.py  test.sh
SAMBA_python/src/samba_py/: __init__.py  niigz_io.py  (+2 more)
SAMBA_python/tests/: test_niigz_streaming.py  test_smoke_imports.py
(+1025 files in other folders)
