[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "samba-py"
version = "0.1.0"
description = "Python utilities for progressively porting SAMBA (streaming NIfTI IO, etc.)"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "nibabel",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
